--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.custom-form-control {
+  border-radius: 0px;
+  border-color: black;
+  color: #3E3E3E; 
+}
+
+.custom-form-control::placeholder {
+  color: #3E3E3E; 
+}
+.submit-button{
+  background-color: #3E3E3E !important;
+  color: #FFFFFF !important;
+  border-radius: 0px;
+}
+
+.form-check-input{
+  background-color: #F2F2F2 !important;
+  border-radius: 0px !important;
+}
+.form-check-input:checked {
+  background-color: #000000 !important;
+  border-radius: 0px !important;
+}
+
+.social-icons .fa-icon {
+  border: 2px solid #000000; 
+  border-radius: 50%;
+  padding: 10px; 
+  color: #000000; 
+  transition: color 0.3s, border-color 0.3s;
+}
+.custom-hr {
+  color: #3D3D3D;
+  height: 4px;
+  border: 2px solid #3D3D3D;
+}
+
+.responsive-img {
+  width: 100%; 
+  max-height: 365px;
+  height: auto; 
+}
+
+@media (min-width: 768px) {
+  .responsive-img {
+    width:100%;
+    object-fit:cover; 
+    
+  }
+}
+
+
+@media (max-width: 767.98px) {
+  .responsive-img {
+    width: 100%;
+    object-fit: cover; 
+    
+  }
+}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
